--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <p align="center">
             <a href="./games/games.html">Games Page</a>
             <a href="./contact.html">Contact</a>
+            <a href="./websites/website.html">Websites</a>
         </p>
     </body>
 </html>
