--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             Discord: xCalifornia#0626 (OR) UnitedAlisha#0522
         </p>
         <p align="center">
-            <a href="mailto:aconnor0213@gmail.com?subject=Item Shouldn't Be There! - retrogames.github.io">Email: aconnor0213@gmail.com</a>
+            <a href="mailto:arcadedevy@outlook.com?subject=Item Shouldn't Be There! - retrogames.github.io">Email: aconnor0213@gmail.com</a>
         </p>
     </body>
 </html>
